# Copyright 2022 The Chromium Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

component("palib") {
  sources = [
    "//base/allocator/partition_allocator/shim/allocator_shim_override_linker_wrapped_symbols.h",
    "//base/allocator/partition_allocator/shim/allocator_shim_internals.h"
  ]

  deps = [
      "//base/allocator/partition_allocator:partition_alloc"
  ]
}
